# vulkan3D

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  compile_shaders.sh  icon.data  todo.txt
src/: CMakeLists.txt  bigvulkan.c  bigvulkan.h  camera.c  camera.h  engine.c  engine.h  geometry.c  geometry.h  input.c  input.h  instance.c  instance.h  l_math.c  l_math.h  main.c  main.h  pipeline.c  pipeline.h  report.c  report.h  types.h  utils.c  utils.h  window.c  window.h
src/SDL/: input.c  input.h  renderer.c  renderer.h  window.c  window.h
src/resource/: simple_shader.vert
